KubernetesDeploy/frontend-volume1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-volume
  labels:
    app: frontend-volume-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: aspnet
  template:
    metadata:
      labels:
        component: aspnet
    spec:
      containers:
      - name: container-volume
        image: luizeduardodev/pizzafrontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: meuvolume
          mountPath: "/app/meuvolume"
      volumes:
      - name: meuvolume
        emptyDir: {}
