KubernetesDeploy/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizzafrontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pizzafrontend
    spec:
      containers:
      - name: pizzafrontend
        image: luizeduardodev/pizzafrontend:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: pizzafrontend
---
apiVersion: v1
kind: Service
metadata:
  name: pizzafrontend
spec:
  type: LoadBalancer # expor a porta para poder acessar no navegador
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: pizzafrontend
